base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    env: production
